<resources>
    <string name="app_name">야외점호 예측기</string>
    <string name="tomorrow">내일은…</string>
    <string name="outside">야외점호</string>
    <string name="inside">실내점호</string>
    <string name="loading">정보를 불러오는 중</string>
    <string name="dot">.</string>

    <string name="air_endpoint">http://openapi.airkorea.or.kr</string>
    <string name="weather_endpoint">http://newsky2.kma.go.kr/service/SecndSrtpdFrcstInfoService2/</string>

    <string name="auth_key">mHZx3FOZedw1eolN0fj8YofDdtE%2FkkxDXyGFA1ATBHxicDorIXiOQjbXr4nQVqrwAJbjZj9ZLWZW6wezu7p7Yg%3D%3D</string>

    <string name="auth_key_encoded">\x6D\x48\x5A\x78\x33\x46\x4F\x5A\x65\x64\x77\x31\x65\x6F\x6C\x4E\x30\x66\x6A\x38\x59\x6F\x66\x44\x64\x74\x45\x25\x32\x46\x6B\x6B\x78\x44\x58\x79\x47\x46\x41\x31\x41\x54\x42\x48\x78\x69\x63\x44\x6F\x72\x49\x58\x69\x4F\x51\x6A\x62\x58\x72\x34\x6E\x51\x56\x71\x72\x77\x41\x4A\x62\x6A\x5A\x6A\x39\x5A\x4C\x57\x5A\x57\x36\x77\x65\x7A\x75\x37\x70\x37\x59\x67\x25\x33\x44\x25\x33\x44</string>
    <string name="auth_key_encoded_ver2">\x6D\x48\x5A\x78\x33\x46\x4F\x5A\x65\x64\x77\x31\x65\x6F\x6C\x4E\x30\x66\x6A\x38\x59\x6F\x66\x44\x64\x74\x45\x2F\x6B\x6B\x78\x44\x58\x79\x47\x46\x41\x31\x41\x54\x42\x48\x78\x69\x63\x44\x6F\x72\x49\x58\x69\x4F\x51\x6A\x62\x58\x72\x34\x6E\x51\x56\x71\x72\x77\x41\x4A\x62\x6A\x5A\x6A\x39\x5A\x4C\x57\x5A\x57\x36\x77\x65\x7A\x75\x37\x70\x37\x59\x67\x3D\x3D</string>
</resources>
